<resources>
    <string name="app_name">placie</string>
    <string name="start_as">Start as</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register new user</string>
    <string name="reg_uname">Create username</string>
    <string name="reg_pwd">Create password</string>
    <string name="inst_name">Institute name</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="no_notification">You don\'t have any notification</string>
    <string name="no_post">No post yet</string>
    <string name="no_notification_msg">We will make you up-to-date with all relevant opportunities</string>
    <string name="no_post_msg">Post your thoughts and help out the community</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_location">Enter your location</string>
    <string name="enter_institute">Enter your institute id</string>
    <string name="enter_course">Enter your course</string>
    <string name="enter_bio">Update your bio</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
</resources>
