<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">
    <android.support.v7.widget.AppCompatTextView android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
                                                 android:textSize="@dimen/eighteen_sp"
                                                 android:text="@string/start_as"
                                                 android:fontFamily="@font/futura"/>
    <android.support.v7.widget.AppCompatTextView android:layout_width="@dimen/two_hundred_dp"
                                                 android:layout_height="@dimen/forty_dp"
                                                 android:textSize="@dimen/eighteen_sp"
                                                 android:text="@string/student"
                                                 android:gravity="center"
                                                 android:textColor="@color/white"
                                                 android:background="@drawable/bg_round_corner"
                                                 android:fontFamily="@font/futura"
                                                 android:id="@+id/studentAuth"
                                                 android:layout_marginTop="@dimen/fifteen_sp"/>
    <android.support.v7.widget.AppCompatTextView android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
                                                 android:textSize="@dimen/eighteen_sp"
                                                 android:text="or"
                                                 android:layout_margin="@dimen/ten_dp"
                                                 android:fontFamily="@font/futura"/>
    <android.support.v7.widget.AppCompatTextView android:layout_width="@dimen/two_hundred_dp"
                                                 android:layout_height="@dimen/forty_dp"
                                                 android:textSize="@dimen/eighteen_sp"
                                                 android:text="@string/admin"
                                                 android:gravity="center"
                                                 android:id="@+id/adminAuth"
                                                 android:textColor="@color/colorPrimary"
                                                 android:background="@drawable/bg_round_light"
                                                 android:fontFamily="@font/futura"
                                                 android:layout_marginTop="@dimen/fifteen_sp"/>
</LinearLayout>