<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@color/white">
    <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"/>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/toolbar_height">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="center_horizontal">
            <android.support.v7.widget.AppCompatImageView android:layout_width="@dimen/hundred_dp"
                                                          android:layout_height="@dimen/hundred_dp"
                                                          app:srcCompat="@drawable/no_notification"
                                                          android:layout_marginTop="@dimen/twenty_one_dp"/>
            <android.support.v7.widget.AppCompatEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:background="@drawable/edit_text_bg_2"
                                                         android:drawableStart="@drawable/icon_user"
                                                         android:padding="@dimen/ten_dp"
                                                         android:hint="@string/enter_name"
                                                         android:fontFamily="@font/futura"
                                                         android:drawablePadding="@dimen/ten_dp"
                                                         android:textSize="@dimen/eighteen_sp"
                                                         android:textColorHint="@color/grey_400"
                                                         android:textColor="@color/grey_800"
                                                         android:layout_margin="@dimen/ten_dp"/>
            <android.support.v7.widget.AppCompatEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:background="@drawable/edit_text_bg_2"
                                                         android:drawableStart="@drawable/icon_email"
                                                         android:padding="@dimen/ten_dp"
                                                         android:hint="@string/enter_email"
                                                         android:fontFamily="@font/futura"
                                                         android:drawablePadding="@dimen/ten_dp"
                                                         android:textSize="@dimen/eighteen_sp"
                                                         android:textColorHint="@color/grey_400"
                                                         android:textColor="@color/grey_800"
                                                         android:layout_margin="@dimen/ten_dp"/>
            <android.support.v7.widget.AppCompatEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:background="@drawable/edit_text_bg_2"
                                                         android:drawableStart="@drawable/icon_location"
                                                         android:padding="@dimen/ten_dp"
                                                         android:hint="@string/enter_location"
                                                         android:fontFamily="@font/futura"
                                                         android:drawablePadding="@dimen/ten_dp"
                                                         android:textSize="@dimen/eighteen_sp"
                                                         android:textColorHint="@color/grey_400"
                                                         android:textColor="@color/grey_800"
                                                         android:layout_margin="@dimen/ten_dp"/>
            <android.support.v7.widget.AppCompatEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:background="@drawable/edit_text_bg_2"
                                                         android:drawableStart="@drawable/icon_school"
                                                         android:padding="@dimen/ten_dp"
                                                         android:hint="@string/enter_institute"
                                                         android:fontFamily="@font/futura"
                                                         android:drawablePadding="@dimen/ten_dp"
                                                         android:textSize="@dimen/eighteen_sp"
                                                         android:textColorHint="@color/grey_400"
                                                         android:textColor="@color/grey_800"
                                                         android:layout_margin="@dimen/ten_dp"/>
            <android.support.v7.widget.AppCompatEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:background="@drawable/edit_text_bg_2"
                                                         android:drawableStart="@drawable/icon_courses"
                                                         android:padding="@dimen/ten_dp"
                                                         android:hint="@string/enter_course"
                                                         android:fontFamily="@font/futura"
                                                         android:drawablePadding="@dimen/ten_dp"
                                                         android:textSize="@dimen/eighteen_sp"
                                                         android:textColorHint="@color/grey_400"
                                                         android:textColor="@color/grey_800"
                                                         android:layout_margin="@dimen/ten_dp"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/forty_dp"
                          android:orientation="horizontal"
                          android:layout_margin="@dimen/ten_dp">
                <android.support.v7.widget.AppCompatTextView android:layout_width="wrap_content"
                                                             android:layout_height="match_parent"
                                                             android:drawableStart="@drawable/ic_calender"
                                                             android:paddingStart="@dimen/ten_dp"/>
                <android.support.v7.widget.AppCompatTextView android:layout_width="wrap_content"
                                                             android:layout_height="@dimen/forty_dp"
                                                             android:layout_weight="1"
                                                             android:text="Start"
                                                             android:gravity="center"
                                                             android:background="@drawable/edit_text_bg_2"
                                                             android:fontFamily="@font/futura"
                                                             android:textColor="@color/grey_400"
                                                             android:textSize="@dimen/eighteen_sp"
                                                             android:layout_marginStart="@dimen/ten_dp"/>
                <android.support.v7.widget.AppCompatTextView android:layout_width="wrap_content"
                                                             android:layout_height="@dimen/forty_dp"
                                                             android:layout_weight="1"
                                                             android:text="End"
                                                             android:gravity="center"
                                                             android:background="@drawable/edit_text_bg_2"
                                                             android:fontFamily="@font/futura"
                                                             android:textColor="@color/grey_400"
                                                             android:textSize="@dimen/eighteen_sp"
                                                             android:layout_marginStart="@dimen/ten_dp"/>
            </LinearLayout>
            <android.support.v7.widget.AppCompatEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:background="@drawable/edit_text_bg_2"
                                                         android:drawableStart="@drawable/icon_bio"
                                                         android:padding="@dimen/ten_dp"
                                                         android:hint="@string/enter_bio"
                                                         android:fontFamily="@font/futura"
                                                         android:drawablePadding="@dimen/ten_dp"
                                                         android:textSize="@dimen/eighteen_sp"
                                                         android:textColorHint="@color/grey_400"
                                                         android:textColor="@color/grey_800"
                                                         android:layout_margin="@dimen/ten_dp"/>
            <View android:layout_width="match_parent" android:layout_height="@dimen/toolbar_height"/>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:layout_gravity="bottom|end"
                                                        android:layout_margin="@dimen/ten_dp"
                                                        android:src="@drawable/icon_done"/>
</android.support.design.widget.CoordinatorLayout>